manifests/ingress/matomo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matomo
  namespace: matomo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`stats.lalux.lu`) && PathPrefix(`/test`)   # Just match the hostname
      kind: Rule
      middlewares:
        - name: secure-headers
        - name: strip-test-prefix
      services:
        - name: nginx-matomo
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: matomo
  namespace: matomo
spec:
  stripPrefix:
    prefixes:
      - /test
