manifests/ingress/testingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matomo-test
  namespace: matomo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`test.local`)
      kind: Rule
      services:
        - name: nginx-matomo
          port: 80
